# collibra-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  terms.csv
collibra_mcp/: __init__.py  config.py  helper_functions.py  search_tools.py  server.py  tools.py
